k8s/cards-testing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cards-testing-service
spec:
  selector:
    app: cards-testing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
