k8s/error-receiver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cards-error-receiver-service
spec:
  selector:
    app: cards-error-receiver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
