k8s/cards-testing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cards-testing-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: testing.cards.unimpossy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cards-testing-service
            port:
              number: 80
  tls:
  - hosts:
    - testing.cards.unimpossy.com
    secretName: cards-testing-tls
