k8s/error-receiver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cards-error-receiver-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: errors.cards.unimpossy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cards-error-receiver-service
            port:
              number: 80
  tls:
  - hosts:
    - errors.cards.unimpossy.com
    secretName: cards-error-receiver-tls
